kubernetes/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # Rule for cmf-ui hostname
  - host: cmf-ui.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cmf-service
            port:
              number: 3000
  # Rule for cmf-server hostname
  - host: cmf-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cmf-service
            port:
              number: 8000
