kubernetes/test/tesnsorboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorboard
  template:
    metadata:
      labels:
        app: tensorboard
    spec:
      containers:
      - name: tensorboard
        image: tensorflow/tensorflow
        command: ["tensorboard", "--logdir", "/logs", "--host", "0.0.0.0"]
        ports:
        - containerPort: 6006
        volumeMounts:
        - name: tensorboard-logs
          mountPath: /logs
      volumes:
      - name: tensorboard-logs
        persistentVolumeClaim:
          claimName: tensorboard-pvc
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: tensorboard-pvc
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tensorboard
spec:
  selector:
    app: tensorboard
  ports:
  - protocol: TCP
    port: 6006
    targetPort: 6006
